fixed card text alignment

--- a/css/values.css
+++ b/css/values.css
@@ -38,26 +38,26 @@ Page Component Styles (icon grid, team member card)
 }
 .values-card {
 	min-height: 204px;
-	color: var(--color-white);
 	border: none;
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	text-align: center;
-	margin: 0px 20px;
 }
 .text-container {
+	min-height: 204px;
 	padding: 0 20px 0 20px;
 }
 .values-card img {
 	margin-bottom: 20px;
 }
 .values-card h2 {
-	margin: 20px 0px 0px 0px;
+	margin: 20px 0px 10px 0px;
 	font-size: var(--font28);
 	font-weight: var(--font-weight-bold);
 	line-height: var(--line-height32);
+	color: var(--color-white);
 }
 .values-card p {
 	display: flex;
@@ -163,6 +163,9 @@ Page Component Styles (icon grid, team member card)
 	font-weight: var(--font-weight-bold);
 	line-height: var(--line-height32);
 }
+.support-header h2 {
+	color: var(--color-white);
+}
 /* inline block allows the alignment with heart icon but doesn't fill desktop */
 .support-header h4,
 .support-header svg {
@@ -203,12 +206,12 @@ Page Component Styles (icon grid, team member card)
 }
 
 /* Turns Title and Paragraph to Black */
-.empowering h4 {
+.empowering h2 {
 	font-size: var(--font28);
 	font-weight: var(--font-weight-bold);
 	line-height: var(--line-height32);
 	color: var(--color-onyx);
-	margin: 0;
+	margin-bottom: 20px;
 }
 .empowering p {
 	text-align: left;
